--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import './theme.css';
 /* stylelint-enable at-rule-no-unknown */
 
 :root {
